# decentralized_celestica

./: .gitignore  Backlog.md  Cargo.toml  Dockerfile  README.md  build.rs  build_docker_image.sh  docker-compose.yml
.git (1)/: COMMIT_EDITMSG
.git (1)/logs/: HEAD
.git (1)/refs/heads/: master
.github/workflows/: rust.yml
SDK/Python/: README.md  setup.py
SDK/Python/celestica/: README.md  client.py  vector_service_pb2.py  vector_service_pb2_grpc.py
notebook/: Dockerfile  README.md  build_docker_image.sh  docker-compose.yml
notebook/notebooks/: text2image.ipynb
proto/: vector_service.proto
schemas/: hnsw_graph.ipldsch
src/: lib.rs  main.rs
src/hnsw_graph/: dist.rs  graph.rs  hnsw.rs  mod.rs  neighbor.rs  node.rs  tests.rs
src/interfaces/: api.rs  cli.rs  cli_grpc.rs  grpc.rs  mod.rs  rest.rs
