[package]
name = "decentralized_celestica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
multihash = "0.18.1"
multibase = "0.9.1"
tokio = { version = "1.28.0", features = ["full"] }
ipfs-api = "0.17.0"
clap = "4.2.5"
warp = "0.3"
tonic = "0.9.2"
tonic-build = "0.9.2"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.2"
tokio-test = "0.4.2"

