[package]
name = "d_celestica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
multihash = "0.18.1"
multibase = "0.9.1"
tokio = { version = "1.28.0", features = ["full"] }
ipfs-api = "0.17.0"
clap = {version = "3.0.0", features = ["env"]}
warp = "0.3"
rand = "0.8.5"
cid = "0.10.1"
test-log = "0.2.11"
log = "0.4.17"
env_logger = "0.10.0"
parking_lot = "0.12.1"
rayon = {version = "1.6"}
num-traits = {version = "0.2"}
cpu-time = {version = "1.0"}

actix-web = "4.0.0-beta.10"
actix-rt = "2.5"

tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
bincode = "1.3.3"

prettytable-rs = "0.10.0"

#  for hashing . hashbrown still needed beccause of get_key_value(&key)
hashbrown = {version = "0.13.2" }
skiplist= {version = "0.5.1" }

lazy_static = { version = "1.4"}
tokio-compat-02 = "0.2.0"
tonic-build = "0.9.2"
rustyline = "9.0.0"
colored = "2"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tempfile = "3.2"
tokio-test = "0.4.2"

